powshell w spaces :thumbsup:
got powershell working with spaces. downside is it takes 9-11 more ms.